Add layout styles and images

--- a/templates/mind/mind.templ
+++ b/templates/mind/mind.templ
@@ -5,24 +5,27 @@ import "github.com/edwincarlflores/mind/db"
 
 templ Thought(thought db.Thought) {
   <div class="flex flex-row space-x-3">
-      <p>{ thought.Body }</p>
-      <input
-        type="checkbox"
-        checked?={thought.Public}
-      />
-    </div>
+    <p>{ thought.Body }</p>
+    <input
+      type="checkbox"
+      checked?={thought.Public}
+    />
+  </div>
 }
 
 templ Thoughts(thoughts []db.Thought) {
-  <div>
     for _, thought := range thoughts {
       @Thought(thought)
     }
-  </div>
 }
 
 templ MindPage(thoughts []db.Thought) {
   @common.Page("Mind") {
-    @Thoughts(thoughts)
+    <div
+      hx-get="/thoughts"
+      hx-trigger="load"
+      hx-swap="innerHTML"
+      id="thoughts-container"
+    />
   }
 }
