--- a/templates/common/page.templ
+++ b/templates/common/page.templ
@@ -1,18 +1,51 @@
 package templates
 
-templ Page(pageName string) {
+templ BaseHtml(pageName string) {
 	<html>
 		<head>
 			<meta charset="UTF-8"/>
-			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<meta
+        name="description"
+        title="description"
+        content="Personal space for storing personal thoughts, memories and even files"
+      />
+			<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 			<title>{ pageName }</title>
-			<script src="https://cdn.tailwindcss.com"></script>
 			<script src="/static/js/htmx.min.js"></script>
+			<script src="https://cdn.tailwindcss.com"></script>
+			<script>
+				tailwind.config = {
+					theme: {
+						container: {
+      				center: true,
+    				},
+						extend: {}
+					}
+				}
+  		</script>
 		</head>
 		<body>
-      <div class="flex flex-col h-screen w-full justify-center items-center">
-			  { children... }
-      </div>
+      { children... }
 		</body>
 	</html>
+}
+
+templ Container() {
+	<div
+		class="container mx-auto h-screen max-w-fit p-6 md:p-6 lg:px-24 lg:py-20"
+		
+		id="container-body">
+			{ children... }
+	</div>
+}
+
+templ Page(pageName string) {
+	@BaseHtml(pageName) {
+		<div class="bg-slate-50">
+			@Navbar()
+			@Container() {
+				{ children... }
+			}
+		</div>
+	}   
 }
