Remove unused parameter

--- a/templates/mind/mind.templ
+++ b/templates/mind/mind.templ
@@ -19,7 +19,7 @@ templ Thoughts(thoughts []db.Thought) {
     }
 }
 
-templ MindPage(thoughts []db.Thought) {
+templ MindPage() {
   @common.Page("Mind") {
     <div
       hx-get="/thoughts"
