--- a/templates/hello/hello.templ
+++ b/templates/hello/hello.templ
@@ -28,7 +28,7 @@ templ HelloName(name string) {
 }
 
 templ HelloPage(){
-	@common.Page("Hello", 0) {
+	@common.Page("Hello", "") {
 		@Hello()
 	}
 }
