--- a/templates/mind/mind.templ
+++ b/templates/mind/mind.templ
@@ -1,12 +1,12 @@
 package templates
 
 import (
-  "github.com/edwincarlflores/mind/db/repository"
+  "github.com/edwincarlflores/mind/entity"
   common "github.com/edwincarlflores/mind/templates/common"
   "fmt"
 )
 
-templ Thought(thought *repository.Thought) {
+templ Thought(thought *entity.Thought) {
   <div class="flex flex-row space-x-3">
     <p>{ thought.Body }</p>
     <input
@@ -16,16 +16,16 @@ templ Thought(thought *repository.Thought) {
   </div>
 }
 
-templ Thoughts(thoughts []*repository.Thought) {
+templ Thoughts(thoughts []*entity.Thought) {
     for _, thought := range thoughts {
       @Thought(thought)
     }
 }
 
-templ MindPage(mindID int) {
-  @common.Page("Mind", mindID) {
+templ MindPage(username string) {
+  @common.Page("Mind", username) {
     <div
-      hx-get={fmt.Sprintf("%d/thoughts", mindID)}
+      hx-get={fmt.Sprintf("%s/thoughts", username)}
       hx-trigger="load"
       hx-swap="innerHTML"
       id="thoughts-container"
