--- a/internal/app/views/mind/mind.templ
+++ b/internal/app/views/mind/mind.templ
@@ -1,12 +1,11 @@
 package views
 
 import (
-	"github.com/edwincarlflores/mind/internal/core/domain/thought"
-	common "github.com/edwincarlflores/mind/internal/app/views/common"
-	"github.com/edwincarlflores/mind/internal/core/domain/mind"
+	"github.com/edwincarlflores/mind/internal/core/domain"
+	shared "github.com/edwincarlflores/mind/internal/app/views/shared"
 )
 
-templ Thought(thought *thought.Thought) {
+templ Thought(thought *domain.Thought) {
 	<div class="flex flex-row space-x-3">
 		<p>{ thought.Body }</p>
 		<input
@@ -16,14 +15,14 @@ templ Thought(thought *thought.Thought) {
 	</div>
 }
 
-templ Thoughts(thoughts []*thought.Thought) {
+templ Thoughts(thoughts []*domain.Thought) {
 	for _, thought := range thoughts {
 		@Thought(thought)
 	}
 }
 
-templ MindPage(mind *mind.Mind) {
-	@common.Page("Mind", mind.User.Username) {
+templ MindPage(mind *domain.Mind) {
+	@shared.Page("Mind", mind.User.Username) {
 		<div id="thoughts-container">
 			Hi { mind.User.Name } ({ mind.User.Username })
 			@Thoughts(mind.Thoughts)
